--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
   <title>CONTACT</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?289682006"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?3830433484" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?40546253" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -299,14 +299,17 @@ background-color:#222222}
       <div class="MenuItemContainer clearfix grpelem" id="u3118"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3119" href="about-me.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3122-4"><!-- content --><p>ABOUT ME</p></div></a>
       </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u4801"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u4802" href="resume.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u4804-4"><!-- content --><p>RESUME</p></div></a>
+      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3155"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3156" href="portfolio.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3158-4"><!-- content --><p>PORTFOLIO</p></div></a>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u3197"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3198" href="donate.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3200-4"><!-- content --><p>DONATE</p></div></a>
-      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u3197"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3198" href="donate.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3200-4"><!-- content --><p>DONATE</p></div></a>
       </div>
      </nav>
     </div>
