--- a/resume.html
+++ b/resume.html
@@ -11,11 +11,11 @@
   <title>RESUME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?289682006"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?7065310" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?4249596629" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?449681745"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?274591513"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -303,18 +303,108 @@ background-color:#222222}
       <div class="MenuItemContainer clearfix grpelem" id="u3118"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3119" href="about-me.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3122-4"><!-- content --><p>ABOUT ME</p></div></a>
       </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u4801"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u4802" href="resume.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u4804-4"><!-- content --><p>RESUME</p></div></a>
+      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3155"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3156" href="portfolio.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3158-4"><!-- content --><p>PORTFOLIO</p></div></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u3197"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3198" href="donate.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3200-4"><!-- content --><p>DONATE</p></div></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u3176"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3177" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3178-4"><!-- content --><p>CONTACT</p></div></a>
       </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u3197"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u3198" href="donate.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3200-4"><!-- content --><p>DONATE</p></div></a>
+      </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="pu3099"><!-- group -->
+    <div class="clearfix colelem" id="ppu1253-78"><!-- group -->
+     <div class="clearfix grpelem" id="pu1253-78"><!-- group -->
+      <div class="clearfix grpelem" id="u1253-78"><!-- content -->
+       <p id="u1253-2">MILENA KISELEVA</p>
+       <p id="u1253-4">Moscow, Russia, 141033</p>
+       <p id="u1253-6">milavakiseleva@gmail.com</p>
+       <p id="u1253-7">&nbsp;</p>
+       <p id="u1253-9">Profile</p>
+       <p id="u1253-10">&nbsp;</p>
+       <p id="u1253-11">&nbsp;</p>
+       <p id="u1253-13">Professional Experience</p>
+       <p id="u1253-14">&nbsp;</p>
+       <p id="u1253-17"><span id="u1253-15">FREELANCE WEB DESIGNER &amp; ILLUSTRATOR</span><span id="u1253-16">,&nbsp; 2015 – Present</span></p>
+       <p id="u1253-19">Various Clients, Worldwide</p>
+       <p id="u1253-21">Manage multiple assignments working with a wide variety of clients, from non-profits to magazines. Built reputation for high-quality work.</p>
+       <p id="u1253-22">&nbsp;</p>
+       <p id="u1253-24">Education</p>
+       <p id="u1253-25">&nbsp;</p>
+       <p id="u1253-29">&nbsp;<span id="u1253-27">Moscow State Regional University (MSRU)</span><span id="u1253-28">, Moscow, Russia</span></p>
+       <p id="u1253-32">&nbsp;<span id="u1253-31">The Faculty of Social Psychology, (2004 – 2005 year) (no degree)</span></p>
+       <p id="u1253-33">&nbsp;</p>
+       <p id="u1253-34">&nbsp;</p>
+       <p id="u1253-36">Areas of Expertise</p>
+       <p id="u1253-37">&nbsp;</p>
+       <ul class="list0 nls-None" id="u1253-44">
+        <li id="u1253-39">Website's development</li>
+        <li id="u1253-41">Design (for Websites, Plugins, Apps)</li>
+        <li id="u1253-43">Web Content / Social Media</li>
+       </ul>
+       <p id="u1253-45">&nbsp;</p>
+       <p id="u1253-47">Additional Skills</p>
+       <p id="u1253-48">&nbsp;</p>
+       <p id="u1253-50">Language:</p>
+       <ul class="list0 nls-None" id="u1253-55">
+        <li id="u1253-52">HTML</li>
+        <li id="u1253-54">CSS</li>
+       </ul>
+       <p id="u1253-56">&nbsp;</p>
+       <p id="u1253-58">Software:</p>
+       <ul class="list0 nls-None" id="u1253-65">
+        <li id="u1253-60">Adobe Photoshop</li>
+        <li id="u1253-62">Adobe Illustrator</li>
+        <li id="u1253-64">Adobe Muse</li>
+       </ul>
+       <p id="u1253-66">&nbsp;</p>
+       <p id="u1253-68">Operating system (OS):</p>
+       <ul class="list0 nls-None" id="u1253-71">
+        <li id="u1253-70">Mac OS X</li>
+       </ul>
+       <p id="u1253-72">&nbsp;</p>
+       <p id="u1253-74">Diplomas</p>
+       <p id="u1253-75">&nbsp;</p>
+       <p id="u1253-76">&nbsp;</p>
+      </div>
+      <div class="SlideShowWidget clearfix widget_invisible grpelem" id="slideshowu4628"><!-- none box -->
+       <div class="popup_anchor" id="u4651popup">
+        <div class="SlideShowContentPanel rgba-background clearfix" id="u4651"><!-- stack box -->
+         <div class="SSSlide clip_frame grpelem" id="u4652"><!-- image -->
+          <img class="block ImageInclude" id="u4652_img" data-src="images/2004.jpg" src="images/blank.gif" alt="" data-width="534" data-height="755"/>
+         </div>
+        </div>
+       </div>
+       <div class="popup_anchor" id="u4631popup">
+        <div class="SSSlideLinks clearfix" id="u4631"><!-- horizontal-rows box -->
+         <div class="SSSlideLink clip_frame grpelem" id="u4638"><!-- image -->
+          <img class="block" id="u4638_img" src="images/2004178x251.jpg" alt="" width="177" height="251"/>
+         </div>
+        </div>
+       </div>
+       <div class="popup_anchor" id="u4650-4popup">
+        <div class="SSPreviousButton clearfix" id="u4650-4"><!-- content -->
+         <p>&lt;</p>
+        </div>
+       </div>
+       <div class="popup_anchor" id="u4663-4popup">
+        <div class="SSNextButton clearfix" id="u4663-4"><!-- content -->
+         <p>&gt;</p>
+        </div>
+       </div>
+       <div class="popup_anchor">
+        <div class="SSCloseButton popup_element clearfix" id="u4642"><!-- group -->
+         <div class="clearfix grpelem" id="u4643-4"><!-- content -->
+          <p>x</p>
+         </div>
+        </div>
+       </div>
+      </div>
+     </div>
      <div class="grpelem" id="u3099"><!-- custom html -->
       <ul class="social-icons">
 	<li>
@@ -396,64 +486,6 @@ background-color:#222222}
      <div class="pointer_cursor clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
-     </div>
-     <div class="clearfix grpelem" id="u1253-39"><!-- content -->
-      <p id="u1253-2">MILENA KISELEVA</p>
-      <p id="u1253-4">Moscow, Russia, 141033</p>
-      <p id="u1253-6">milavakiseleva@gmail.com</p>
-      <p id="u1253-7">&nbsp;</p>
-      <p id="u1253-9">Profile</p>
-      <p id="u1253-10">&nbsp;</p>
-      <p id="u1253-11">&nbsp;</p>
-      <p id="u1253-13">Professional Experience</p>
-      <p id="u1253-14">&nbsp;</p>
-      <p id="u1253-15">&nbsp;</p>
-      <p id="u1253-17">Education</p>
-      <p id="u1253-18">&nbsp;</p>
-      <p id="u1253-22">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1253-20">Moscow State Regional University (MSRU)</span><span id="u1253-21">, Moscow, Russia</span></p>
-      <p id="u1253-25">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1253-24">The Faculty of Social Psychology, (2004 – 2005 year) (no degree)</span></p>
-      <p id="u1253-26">&nbsp;</p>
-      <p id="u1253-27">&nbsp;</p>
-      <p id="u1253-29">Areas of Expertise</p>
-      <p id="u1253-30">&nbsp;</p>
-      <p id="u1253-32">Additional Skills</p>
-      <p id="u1253-33">&nbsp;</p>
-      <p id="u1253-35">Diplomas</p>
-      <p id="u1253-36">&nbsp;</p>
-      <p id="u1253-37">&nbsp;</p>
-     </div>
-    </div>
-    <div class="SlideShowWidget clearfix widget_invisible colelem" id="slideshowu4628"><!-- none box -->
-     <div class="popup_anchor" id="u4651popup">
-      <div class="SlideShowContentPanel rgba-background clearfix" id="u4651"><!-- stack box -->
-       <div class="SSSlide clip_frame grpelem" id="u4652"><!-- image -->
-        <img class="block ImageInclude" id="u4652_img" data-src="images/2004.jpg" src="images/blank.gif" alt="" data-width="534" data-height="755"/>
-       </div>
-      </div>
-     </div>
-     <div class="popup_anchor" id="u4631popup">
-      <div class="SSSlideLinks clearfix" id="u4631"><!-- horizontal-rows box -->
-       <div class="SSSlideLink clip_frame grpelem" id="u4638"><!-- image -->
-        <img class="block" id="u4638_img" src="images/2004178x251.jpg" alt="" width="177" height="251"/>
-       </div>
-      </div>
-     </div>
-     <div class="popup_anchor" id="u4650-4popup">
-      <div class="SSPreviousButton clearfix" id="u4650-4"><!-- content -->
-       <p>&lt;</p>
-      </div>
-     </div>
-     <div class="popup_anchor" id="u4663-4popup">
-      <div class="SSNextButton clearfix" id="u4663-4"><!-- content -->
-       <p>&gt;</p>
-      </div>
-     </div>
-     <div class="popup_anchor">
-      <div class="SSCloseButton popup_element clearfix" id="u4642"><!-- group -->
-       <div class="clearfix grpelem" id="u4643-4"><!-- content -->
-        <p>x</p>
-       </div>
-      </div>
      </div>
     </div>
     <div class="verticalspacer"></div>
