--- a/resume.html
+++ b/resume.html
@@ -12,10 +12,10 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?4249596629" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?3865743168" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?274591513"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?3907965509"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -317,9 +317,9 @@ background-color:#222222}
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="ppu1253-78"><!-- group -->
-     <div class="clearfix grpelem" id="pu1253-78"><!-- group -->
-      <div class="clearfix grpelem" id="u1253-78"><!-- content -->
+    <div class="clearfix colelem" id="ppu1253-86"><!-- group -->
+     <div class="clearfix grpelem" id="pu1253-86"><!-- group -->
+      <div class="clearfix grpelem" id="u1253-86"><!-- content -->
        <p id="u1253-2">MILENA KISELEVA</p>
        <p id="u1253-4">Moscow, Russia, 141033</p>
        <p id="u1253-6">milavakiseleva@gmail.com</p>
@@ -341,35 +341,39 @@ background-color:#222222}
        <p id="u1253-34">&nbsp;</p>
        <p id="u1253-36">Areas of Expertise</p>
        <p id="u1253-37">&nbsp;</p>
-       <ul class="list0 nls-None" id="u1253-44">
-        <li id="u1253-39">Website's development</li>
-        <li id="u1253-41">Design (for Websites, Plugins, Apps)</li>
-        <li id="u1253-43">Web Content / Social Media</li>
+       <ul class="list0 nls-None" id="u1253-48">
+        <li id="u1253-39">Websites development</li>
+        <li id="u1253-41">Icons Creating</li>
+        <li id="u1253-43">Logos Creating</li>
+        <li id="u1253-45">Design (for Websites)</li>
+        <li id="u1253-47">Web Content / Social Media</li>
        </ul>
-       <p id="u1253-45">&nbsp;</p>
-       <p id="u1253-47">Additional Skills</p>
-       <p id="u1253-48">&nbsp;</p>
-       <p id="u1253-50">Language:</p>
-       <ul class="list0 nls-None" id="u1253-55">
-        <li id="u1253-52">HTML</li>
-        <li id="u1253-54">CSS</li>
+       <p id="u1253-49">&nbsp;</p>
+       <p id="u1253-51">Additional Skills</p>
+       <p id="u1253-52">&nbsp;</p>
+       <p id="u1253-54">Language:</p>
+       <ul class="list0 nls-None" id="u1253-59">
+        <li id="u1253-56">HTML</li>
+        <li id="u1253-58">CSS</li>
        </ul>
-       <p id="u1253-56">&nbsp;</p>
-       <p id="u1253-58">Software:</p>
-       <ul class="list0 nls-None" id="u1253-65">
-        <li id="u1253-60">Adobe Photoshop</li>
-        <li id="u1253-62">Adobe Illustrator</li>
-        <li id="u1253-64">Adobe Muse</li>
-       </ul>
-       <p id="u1253-66">&nbsp;</p>
-       <p id="u1253-68">Operating system (OS):</p>
+       <p id="u1253-60">&nbsp;</p>
+       <p id="u1253-62">Software:</p>
        <ul class="list0 nls-None" id="u1253-71">
-        <li id="u1253-70">Mac OS X</li>
+        <li id="u1253-64">Adobe Photoshop</li>
+        <li id="u1253-66">Adobe Illustrator</li>
+        <li id="u1253-68">Adobe Illustrator Draw</li>
+        <li id="u1253-70">Adobe Muse</li>
        </ul>
        <p id="u1253-72">&nbsp;</p>
-       <p id="u1253-74">Diplomas</p>
-       <p id="u1253-75">&nbsp;</p>
-       <p id="u1253-76">&nbsp;</p>
+       <p id="u1253-74">Operating system (OS):</p>
+       <ul class="list0 nls-None" id="u1253-79">
+        <li id="u1253-76">Mac OS X</li>
+        <li id="u1253-78">iOS</li>
+       </ul>
+       <p id="u1253-80">&nbsp;</p>
+       <p id="u1253-82">Diplomas</p>
+       <p id="u1253-83">&nbsp;</p>
+       <p id="u1253-84">&nbsp;</p>
       </div>
       <div class="SlideShowWidget clearfix widget_invisible grpelem" id="slideshowu4628"><!-- none box -->
        <div class="popup_anchor" id="u4651popup">
@@ -483,7 +487,7 @@ background-color:#222222}
 </div>
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
      <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-     <div class="pointer_cursor clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+     <div class="pointer_cursor rounded-corners clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
      </div>
