--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?3865743168" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?4140883857" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?3907965509"/>
@@ -361,7 +361,7 @@ background-color:#222222}
        <ul class="list0 nls-None" id="u1253-71">
         <li id="u1253-64">Adobe Photoshop</li>
         <li id="u1253-66">Adobe Illustrator</li>
-        <li id="u1253-68">Adobe Illustrator Draw</li>
+        <li id="u1253-68">Adobe Draw</li>
         <li id="u1253-70">Adobe Muse</li>
        </ul>
        <p id="u1253-72">&nbsp;</p>
