--- a/about-me.html
+++ b/about-me.html
@@ -11,8 +11,8 @@
   <title>ABOUT ME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/about-me.css?417492135" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?3983960347"/>
+  <link rel="stylesheet" type="text/css" href="css/about-me.css?356755704" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -362,15 +362,11 @@ background-color:#222222}
         </div>
        </div>
       </div>
-      <div class="clearfix colelem" id="pu1290-9"><!-- group -->
-       <div class="clearfix grpelem" id="u1290-9"><!-- content -->
-        <p id="u1290-2">Hello, My name is Milena. I'm a self employed web designer from Moscow, Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people. I love to use Adobe Illustrator, Adobe Photoshop and Adobe Muse for creating amazing things.</p>
-        <p id="u1290-3">&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p id="u1290-7">I love use Final Cut Pro X, because I make vlog about my live, on YouTube.</p>
-       </div>
-       <img class="grpelem" id="u3738-4" alt="♥ ♥ ♥" width="88" height="23" src="images/u3738-4.png"/><!-- rasterized frame -->
+      <div class="clearfix colelem" id="u1290-9"><!-- content -->
+       <p>Hello, My name is Milena. I'm a self employed web designer from Moscow, Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people.</p>
+       <p>I love to use Adobe Apps for creating amazing things.</p>
+       <p>My intention is to create projects that is uplifting, vibrant and colourful. I am really passionate about my work, I like what I am doing and hope that you will be enriched by my projects too.</p>
+       <p>&nbsp;</p>
       </div>
      </div>
      <div class="grpelem" id="u3099"><!-- custom html -->
