--- a/resume.html
+++ b/resume.html
@@ -11,11 +11,11 @@
   <title>RESUME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?4140883857" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?3983960347"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?4064997452" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?3907965509"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?417639298"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -317,63 +317,75 @@ background-color:#222222}
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="ppu1253-86"><!-- group -->
-     <div class="clearfix grpelem" id="pu1253-86"><!-- group -->
-      <div class="clearfix grpelem" id="u1253-86"><!-- content -->
+    <div class="clearfix colelem" id="ppu1253-105"><!-- group -->
+     <div class="clearfix grpelem" id="pu1253-105"><!-- group -->
+      <div class="clearfix grpelem" id="u1253-105"><!-- content -->
        <p id="u1253-2">MILENA KISELEVA</p>
        <p id="u1253-4">Moscow, Russia, 141033</p>
        <p id="u1253-6">milavakiseleva@gmail.com</p>
        <p id="u1253-7">&nbsp;</p>
        <p id="u1253-9">Profile</p>
        <p id="u1253-10">&nbsp;</p>
-       <p id="u1253-11">&nbsp;</p>
-       <p id="u1253-13">Professional Experience</p>
-       <p id="u1253-14">&nbsp;</p>
-       <p id="u1253-17"><span id="u1253-15">FREELANCE WEB DESIGNER &amp; ILLUSTRATOR</span><span id="u1253-16">,&nbsp; 2015 – Present</span></p>
-       <p id="u1253-19">Various Clients, Worldwide</p>
-       <p id="u1253-21">Manage multiple assignments working with a wide variety of clients, from non-profits to magazines. Built reputation for high-quality work.</p>
-       <p id="u1253-22">&nbsp;</p>
-       <p id="u1253-24">Education</p>
-       <p id="u1253-25">&nbsp;</p>
-       <p id="u1253-29">&nbsp;<span id="u1253-27">Moscow State Regional University (MSRU)</span><span id="u1253-28">, Moscow, Russia</span></p>
-       <p id="u1253-32">&nbsp;<span id="u1253-31">The Faculty of Social Psychology, (2004 – 2005 year) (no degree)</span></p>
-       <p id="u1253-33">&nbsp;</p>
-       <p id="u1253-34">&nbsp;</p>
-       <p id="u1253-36">Areas of Expertise</p>
-       <p id="u1253-37">&nbsp;</p>
-       <ul class="list0 nls-None" id="u1253-48">
-        <li id="u1253-39">Websites development</li>
-        <li id="u1253-41">Icons Creating</li>
-        <li id="u1253-43">Logos Creating</li>
-        <li id="u1253-45">Design (for Websites)</li>
-        <li id="u1253-47">Web Content / Social Media</li>
+       <p id="u1253-12"><span id="u1253-11">An enthusiastic, ambitious and energetic graphic designer who has excellent print design and management skills, combined with expertise in web design and digital media creation.</span></p>
+       <p id="u1253-13">&nbsp;</p>
+       <p id="u1253-15">Professional Experience</p>
+       <p id="u1253-16">&nbsp;</p>
+       <p id="u1253-19"><span id="u1253-17">FREELANCE WEB DESIGNER &amp; ILLUSTRATOR</span><span id="u1253-18">,&nbsp; 2015 – Present</span></p>
+       <p id="u1253-21">Various Clients, Worldwide</p>
+       <p id="u1253-23">Manage multiple assignments working with a wide variety of clients, from non-profits to magazines. Built reputation for high-quality work.</p>
+       <p id="u1253-24">&nbsp;</p>
+       <p id="u1253-26">Education</p>
+       <p id="u1253-27">&nbsp;</p>
+       <p id="u1253-31">&nbsp;<span id="u1253-29">Moscow State Regional University (MSRU)</span><span id="u1253-30">, Moscow, Russia</span></p>
+       <p id="u1253-34">&nbsp;<span id="u1253-33">The Faculty of Social Psychology, (2004 – 2005 year) (no degree)</span></p>
+       <p id="u1253-35">&nbsp;</p>
+       <p id="u1253-36">&nbsp;</p>
+       <p id="u1253-38">Areas of Expertise</p>
+       <p id="u1253-39">&nbsp;</p>
+       <ul class="list0 nls-None" id="u1253-50">
+        <li id="u1253-41">Websites development</li>
+        <li id="u1253-43">Icon creating</li>
+        <li id="u1253-45">Logo creating</li>
+        <li id="u1253-47">Website Layout Design</li>
+        <li id="u1253-49">Web Content / Social Media</li>
        </ul>
-       <p id="u1253-49">&nbsp;</p>
-       <p id="u1253-51">Additional Skills</p>
-       <p id="u1253-52">&nbsp;</p>
-       <p id="u1253-54">Language:</p>
-       <ul class="list0 nls-None" id="u1253-59">
-        <li id="u1253-56">HTML</li>
-        <li id="u1253-58">CSS</li>
+       <p id="u1253-51">&nbsp;</p>
+       <p id="u1253-53">Additional Skills</p>
+       <p id="u1253-54">&nbsp;</p>
+       <p id="u1253-56">Language:</p>
+       <ul class="list0 nls-None" id="u1253-61">
+        <li id="u1253-58">HTML4, HTML5</li>
+        <li id="u1253-60">CSS2, CSS3</li>
        </ul>
-       <p id="u1253-60">&nbsp;</p>
-       <p id="u1253-62">Software:</p>
-       <ul class="list0 nls-None" id="u1253-71">
-        <li id="u1253-64">Adobe Photoshop</li>
-        <li id="u1253-66">Adobe Illustrator</li>
-        <li id="u1253-68">Adobe Draw</li>
-        <li id="u1253-70">Adobe Muse</li>
+       <p id="u1253-62">&nbsp;</p>
+       <p id="u1253-64">Software:</p>
+       <ul class="list0 nls-None" id="u1253-81">
+        <li id="u1253-66">Adobe Photoshop</li>
+        <li id="u1253-68">Adobe Illustrator</li>
+        <li id="u1253-70">Adobe Draw</li>
+        <li id="u1253-72">Adobe Muse</li>
+        <li id="u1253-74">GIMP</li>
+        <li id="u1253-76">Apple Final Cut Pro</li>
+        <li id="u1253-78">Apple Compressor</li>
+        <li id="u1253-80">Apple Motion</li>
        </ul>
-       <p id="u1253-72">&nbsp;</p>
-       <p id="u1253-74">Operating system (OS):</p>
-       <ul class="list0 nls-None" id="u1253-79">
-        <li id="u1253-76">Mac OS X</li>
-        <li id="u1253-78">iOS</li>
+       <p id="u1253-82">&nbsp;</p>
+       <p id="u1253-84">Operating system (OS):</p>
+       <ul class="list0 nls-None" id="u1253-89">
+        <li id="u1253-86">Apple Mac OS X</li>
+        <li id="u1253-88">Apple iOS</li>
        </ul>
-       <p id="u1253-80">&nbsp;</p>
-       <p id="u1253-82">Diplomas</p>
-       <p id="u1253-83">&nbsp;</p>
-       <p id="u1253-84">&nbsp;</p>
+       <p id="u1253-90">&nbsp;</p>
+       <p id="u1253-92">Languages known</p>
+       <p id="u1253-93">&nbsp;</p>
+       <ul class="list0 nls-None" id="u1253-98">
+        <li id="u1253-95"><span id="u1253-94">Russian</span></li>
+        <li id="u1253-97"><span id="u1253-96">English</span></li>
+       </ul>
+       <p id="u1253-99">&nbsp;</p>
+       <p id="u1253-101">Diplomas</p>
+       <p id="u1253-102">&nbsp;</p>
+       <p id="u1253-103">&nbsp;</p>
       </div>
       <div class="SlideShowWidget clearfix widget_invisible grpelem" id="slideshowu4628"><!-- none box -->
        <div class="popup_anchor" id="u4651popup">
