--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?3983960347"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?397905569" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?269667272" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?417639298"/>
@@ -317,110 +317,7 @@ background-color:#222222}
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="ppu1253-105"><!-- group -->
-     <div class="clearfix grpelem" id="pu1253-105"><!-- group -->
-      <div class="clearfix grpelem" id="u1253-105"><!-- content -->
-       <p id="u1253-2">MILENA KISELEVA</p>
-       <p id="u1253-4">Moscow, Russia, 141033</p>
-       <p id="u1253-6">milavakiseleva@gmail.com</p>
-       <p id="u1253-7">&nbsp;</p>
-       <p id="u1253-9">Profile</p>
-       <p id="u1253-10">&nbsp;</p>
-       <p id="u1253-12"><span id="u1253-11">An enthusiastic, ambitious and energetic graphic designer who has excellent print design and management skills, combined with expertise in web design and digital media creation.</span></p>
-       <p id="u1253-13">&nbsp;</p>
-       <p id="u1253-15">Professional Experience</p>
-       <p id="u1253-16">&nbsp;</p>
-       <p id="u1253-19"><span id="u1253-17">FREELANCE WEB DESIGNER &amp; ILLUSTRATOR</span><span id="u1253-18">,&nbsp; 2015 – Present</span></p>
-       <p id="u1253-21">Various Clients, Worldwide</p>
-       <p id="u1253-23">Manage multiple assignments working with a wide variety of clients, from non-profits to magazines. Built reputation for high-quality work.</p>
-       <p id="u1253-24">&nbsp;</p>
-       <p id="u1253-26">Education</p>
-       <p id="u1253-27">&nbsp;</p>
-       <p id="u1253-31">&nbsp;<span id="u1253-29">Moscow State Regional University (MSRU)</span><span id="u1253-30">, Moscow, Russia</span></p>
-       <p id="u1253-34">&nbsp;<span id="u1253-33">The Faculty of Social Psychology, (2004 – 2005 year) (no degree)</span></p>
-       <p id="u1253-35">&nbsp;</p>
-       <p id="u1253-36">&nbsp;</p>
-       <p id="u1253-38">Areas of Expertise</p>
-       <p id="u1253-39">&nbsp;</p>
-       <ul class="list0 nls-None" id="u1253-50">
-        <li id="u1253-41">Websites development</li>
-        <li id="u1253-43">Icon creating</li>
-        <li id="u1253-45">Logo creating</li>
-        <li id="u1253-47">Website Layout Design</li>
-        <li id="u1253-49">Web Content / Social Media</li>
-       </ul>
-       <p id="u1253-51">&nbsp;</p>
-       <p id="u1253-53">Additional Skills</p>
-       <p id="u1253-54">&nbsp;</p>
-       <p id="u1253-56">Language:</p>
-       <ul class="list0 nls-None" id="u1253-61">
-        <li id="u1253-58">HTML4, HTML5</li>
-        <li id="u1253-60">CSS2, CSS3</li>
-       </ul>
-       <p id="u1253-62">&nbsp;</p>
-       <p id="u1253-64">Software:</p>
-       <ul class="list0 nls-None" id="u1253-81">
-        <li id="u1253-66">Adobe Photoshop</li>
-        <li id="u1253-68">Adobe Illustrator</li>
-        <li id="u1253-70">Adobe Draw</li>
-        <li id="u1253-72">Adobe Muse</li>
-        <li id="u1253-74">GIMP</li>
-        <li id="u1253-76">Apple Final Cut Pro</li>
-        <li id="u1253-78">Apple Compressor</li>
-        <li id="u1253-80">Apple Motion</li>
-       </ul>
-       <p id="u1253-82">&nbsp;</p>
-       <p id="u1253-84">Operating system (OS):</p>
-       <ul class="list0 nls-None" id="u1253-89">
-        <li id="u1253-86">Apple Mac OS X</li>
-        <li id="u1253-88">Apple iOS</li>
-       </ul>
-       <p id="u1253-90">&nbsp;</p>
-       <p id="u1253-92">Languages known</p>
-       <p id="u1253-93">&nbsp;</p>
-       <ul class="list0 nls-None" id="u1253-98">
-        <li id="u1253-95"><span id="u1253-94">Russian</span></li>
-        <li id="u1253-97"><span id="u1253-96">English</span></li>
-       </ul>
-       <p id="u1253-99">&nbsp;</p>
-       <p id="u1253-101">Diplomas</p>
-       <p id="u1253-102">&nbsp;</p>
-       <p id="u1253-103">&nbsp;</p>
-      </div>
-      <div class="SlideShowWidget clearfix widget_invisible grpelem" id="slideshowu4628"><!-- none box -->
-       <div class="popup_anchor" id="u4651popup">
-        <div class="SlideShowContentPanel rgba-background clearfix" id="u4651"><!-- stack box -->
-         <div class="SSSlide clip_frame grpelem" id="u4652"><!-- image -->
-          <img class="block ImageInclude" id="u4652_img" data-src="images/2004.jpg" src="images/blank.gif" alt="" data-width="534" data-height="755"/>
-         </div>
-        </div>
-       </div>
-       <div class="popup_anchor" id="u4631popup">
-        <div class="SSSlideLinks clearfix" id="u4631"><!-- horizontal-rows box -->
-         <div class="SSSlideLink clip_frame grpelem" id="u4638"><!-- image -->
-          <img class="block" id="u4638_img" src="images/2004178x251.jpg" alt="" width="177" height="251"/>
-         </div>
-        </div>
-       </div>
-       <div class="popup_anchor" id="u4650-4popup">
-        <div class="SSPreviousButton clearfix" id="u4650-4"><!-- content -->
-         <p>&lt;</p>
-        </div>
-       </div>
-       <div class="popup_anchor" id="u4663-4popup">
-        <div class="SSNextButton clearfix" id="u4663-4"><!-- content -->
-         <p>&gt;</p>
-        </div>
-       </div>
-       <div class="popup_anchor">
-        <div class="SSCloseButton popup_element clearfix" id="u4642"><!-- group -->
-         <div class="clearfix grpelem" id="u4643-4"><!-- content -->
-          <p>x</p>
-         </div>
-        </div>
-       </div>
-      </div>
-     </div>
+    <div class="clearfix colelem" id="pu3099"><!-- group -->
      <div class="grpelem" id="u3099"><!-- custom html -->
       <ul class="social-icons">
 	<li>
@@ -502,6 +399,107 @@ background-color:#222222}
      <div class="pointer_cursor rounded-corners clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
+     </div>
+     <div class="clearfix grpelem" id="u1253-105"><!-- content -->
+      <p id="u1253-2">MILENA KISELEVA</p>
+      <p id="u1253-4">Moscow, Russia, 141033</p>
+      <p id="u1253-6">milavakiseleva@gmail.com</p>
+      <p id="u1253-7">&nbsp;</p>
+      <p id="u1253-9">Profile</p>
+      <p id="u1253-10">&nbsp;</p>
+      <p id="u1253-12"><span id="u1253-11">An enthusiastic, ambitious and energetic graphic designer who has excellent print design and management skills, combined with expertise in web design and digital media creation.</span></p>
+      <p id="u1253-13">&nbsp;</p>
+      <p id="u1253-15">Professional Experience</p>
+      <p id="u1253-16">&nbsp;</p>
+      <p id="u1253-19"><span id="u1253-17">FREELANCE WEB DESIGNER &amp; ILLUSTRATOR</span><span id="u1253-18">,&nbsp; 2015 – Present</span></p>
+      <p id="u1253-21">Various Clients, Worldwide</p>
+      <p id="u1253-23">Manage multiple assignments working with a wide variety of clients, from non-profits to magazines. Built reputation for high-quality work.</p>
+      <p id="u1253-24">&nbsp;</p>
+      <p id="u1253-26">Education</p>
+      <p id="u1253-27">&nbsp;</p>
+      <p id="u1253-31">&nbsp;<span id="u1253-29">Moscow State Regional University (MSRU)</span><span id="u1253-30">, Moscow, Russia</span></p>
+      <p id="u1253-34">&nbsp;<span id="u1253-33">The Faculty of Social Psychology, (2004 – 2005 year) (no degree)</span></p>
+      <p id="u1253-35">&nbsp;</p>
+      <p id="u1253-36">&nbsp;</p>
+      <p id="u1253-38">Areas of Expertise</p>
+      <p id="u1253-39">&nbsp;</p>
+      <ul class="list0 nls-None" id="u1253-50">
+       <li id="u1253-41">Websites development</li>
+       <li id="u1253-43">Icon creating</li>
+       <li id="u1253-45">Logo creating</li>
+       <li id="u1253-47">Website Layout Design</li>
+       <li id="u1253-49">Web Content / Social Media</li>
+      </ul>
+      <p id="u1253-51">&nbsp;</p>
+      <p id="u1253-53">Additional Skills</p>
+      <p id="u1253-54">&nbsp;</p>
+      <p id="u1253-56">Language:</p>
+      <ul class="list0 nls-None" id="u1253-61">
+       <li id="u1253-58">HTML4, HTML5</li>
+       <li id="u1253-60">CSS2, CSS3</li>
+      </ul>
+      <p id="u1253-62">&nbsp;</p>
+      <p id="u1253-64">Software:</p>
+      <ul class="list0 nls-None" id="u1253-81">
+       <li id="u1253-66">Adobe Photoshop</li>
+       <li id="u1253-68">Adobe Illustrator</li>
+       <li id="u1253-70">Adobe Draw</li>
+       <li id="u1253-72">Adobe Muse</li>
+       <li id="u1253-74">GIMP</li>
+       <li id="u1253-76">Apple Final Cut Pro</li>
+       <li id="u1253-78">Apple Compressor</li>
+       <li id="u1253-80">Apple Motion</li>
+      </ul>
+      <p id="u1253-82">&nbsp;</p>
+      <p id="u1253-84">Operating system (OS):</p>
+      <ul class="list0 nls-None" id="u1253-89">
+       <li id="u1253-86">Apple Mac OS X</li>
+       <li id="u1253-88">Apple iOS</li>
+      </ul>
+      <p id="u1253-90">&nbsp;</p>
+      <p id="u1253-92">Languages known</p>
+      <p id="u1253-93">&nbsp;</p>
+      <ul class="list0 nls-None" id="u1253-98">
+       <li id="u1253-95"><span id="u1253-94">Russian</span></li>
+       <li id="u1253-97"><span id="u1253-96">English</span></li>
+      </ul>
+      <p id="u1253-99">&nbsp;</p>
+      <p id="u1253-101">Diplomas</p>
+      <p id="u1253-102">&nbsp;</p>
+      <p id="u1253-103">&nbsp;</p>
+     </div>
+    </div>
+    <div class="SlideShowWidget clearfix widget_invisible colelem" id="slideshowu4628"><!-- none box -->
+     <div class="popup_anchor" id="u4651popup">
+      <div class="SlideShowContentPanel rgba-background clearfix" id="u4651"><!-- stack box -->
+       <div class="SSSlide clip_frame grpelem" id="u4652"><!-- image -->
+        <img class="block ImageInclude" id="u4652_img" data-src="images/2004.jpg" src="images/blank.gif" alt="" data-width="534" data-height="755"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u4631popup">
+      <div class="SSSlideLinks clearfix" id="u4631"><!-- horizontal-rows box -->
+       <div class="SSSlideLink clip_frame grpelem" id="u4638"><!-- image -->
+        <img class="block" id="u4638_img" src="images/2004178x251.jpg" alt="" width="177" height="251"/>
+       </div>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u4650-4popup">
+      <div class="SSPreviousButton clearfix" id="u4650-4"><!-- content -->
+       <p>&lt;</p>
+      </div>
+     </div>
+     <div class="popup_anchor" id="u4663-4popup">
+      <div class="SSNextButton clearfix" id="u4663-4"><!-- content -->
+       <p>&gt;</p>
+      </div>
+     </div>
+     <div class="popup_anchor">
+      <div class="SSCloseButton popup_element clearfix" id="u4642"><!-- group -->
+       <div class="clearfix grpelem" id="u4643-4"><!-- content -->
+        <p>x</p>
+       </div>
+      </div>
      </div>
     </div>
     <div class="verticalspacer"></div>
