--- a/website-karolinaray.tk.html
+++ b/website-karolinaray.tk.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "website-karolinaray_tk.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "website-karolinaray_tk.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -44,7 +44,7 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix colelem" id="u1722-16"><!-- content -->
      <p>&nbsp;</p>
      <p><span id="u1722-2">Date:</span> June, 2013</p>
-     <p><span id="u1722-5">Technology:</span> CMS WordPress, PHP, HTML, CSS, JavaScript, MySQL</p>
+     <p><span id="u1722-5">Technology:</span> Adobe Muse, GitHub Pages, Custom Design, HTML, CSS, JavaScript</p>
      <p>&nbsp;</p>
      <p>Developed in conjunction with web developer <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank"><span id="u1722-10">Arthur Gareginyan</span></a>.</p>
      <p>&nbsp;</p>
