--- a/about-me.html
+++ b/about-me.html
@@ -11,8 +11,8 @@
   <title>ABOUT ME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?3983960347"/>
-  <link rel="stylesheet" type="text/css" href="css/about-me.css?356755704" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
+  <link rel="stylesheet" type="text/css" href="css/about-me.css?107195511" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -362,11 +362,16 @@ background-color:#222222}
         </div>
        </div>
       </div>
-      <div class="clearfix colelem" id="u1290-9"><!-- content -->
-       <p>Hello, My name is Milena. I'm a self employed web designer from Moscow, Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people.</p>
-       <p>I love to use Adobe Apps for creating amazing things.</p>
-       <p>My intention is to create projects that is uplifting, vibrant and colourful. I am really passionate about my work, I like what I am doing and hope that you will be enriched by my projects too.</p>
-       <p>&nbsp;</p>
+      <div class="clearfix colelem" id="u1290-17"><!-- content -->
+       <p id="u1290-2">Hello, My name is Milena. I'm a self employed designer from Moscow, Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people.</p>
+       <p id="u1290-4">I love to use Adobe Apps for creating amazing things.</p>
+       <p id="u1290-6">My intention is to create projects that is uplifting, vibrant and colourful. I am really passionate about my work, I like what I am doing and hope that you will be enriched by my projects too.</p>
+       <p id="u1290-7">&nbsp;</p>
+       <p id="u1290-9">My interests are: Design, Graphics, Photography, Reading ... and many more.</p>
+       <p id="u1290-10">&nbsp;</p>
+       <p id="u1290-11">&nbsp;</p>
+       <p id="u1290-13">My Photo album</p>
+       <p id="u1290-15">( latest from my Instagram accaunt )</p>
       </div>
      </div>
      <div class="grpelem" id="u3099"><!-- custom html -->
@@ -447,7 +452,7 @@ background-color:#222222}
 </div>
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
      <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-     <div class="pointer_cursor rounded-corners clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+     <div class="pointer_cursor clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
      </div>
