--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "portfolio.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "portfolio.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?210667234" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?3933501523" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -317,7 +317,7 @@ background-color:#222222}
      <div class="clearfix grpelem" id="ppu1760-5"><!-- column -->
       <div class="clearfix colelem" id="pu1760-5"><!-- group -->
        <div class="clearfix grpelem" id="u1760-5"><!-- content -->
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u1760-2"> You can check my online portfolio for projects I have completed.</span></p>
+        <p><span id="u1760">&nbsp; </span><span id="u1760-2"> You can check my online portfolio for projects I have completed. This is not all what I ever done, this is only some examples of them. You may click to each image to see the details.</span></p>
        </div>
        <div class="grpelem" id="u4522"><!-- custom html -->
         <script language="JavaScript">
@@ -340,9 +340,9 @@ background-color:#222222}
       </div>
       <div class="clearfix colelem" id="pu3841-9"><!-- group -->
        <div class="clearfix grpelem" id="u3841-9"><!-- content -->
-        <p id="u3841-2">Website's</p>
+        <p id="u3841-2">Websites</p>
         <p id="u3841-3">&nbsp;</p>
-        <p id="u3841-6"><span id="u3841-4">&nbsp; </span><span id="u3841-5"> The following are examples of my work on the web-mastering (the creation of websites). Web-mastering covers many aspects related to the management and maintenance of the website.</span></p>
+        <p id="u3841-6"><span id="u3841-4">&nbsp; </span><span id="u3841-5"> The following are examples of some of my works on the web-mastering (I can not show all due to the privacy policy). Web-mastering is not only the process of creating a design, and engineering. Also it covers many aspects related to the maintenance and management of the website.</span></p>
         <p id="u3841-7">&nbsp;</p>
        </div>
        <div class="grpelem" id="u4002"><!-- simple frame --></div>
@@ -432,14 +432,14 @@ background-color:#222222}
 </div>
      <div class="grpelem" id="u3104"><!-- simple frame --></div>
      <img class="grpelem" id="u4273-4" alt="" width="34" height="148" src="images/u4273-4.png"/><!-- rasterized frame -->
-     <div class="pointer_cursor rounded-corners clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
+     <div class="pointer_cursor clearfix grpelem" id="u3222-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="47" data-mu-ie-matrix-dy="-47"><!-- content -->
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu3844-6"><!-- group -->
      <div class="clearfix grpelem" id="u3844-6"><!-- content -->
-      <p id="u3844-2">Icon set's</p>
+      <p id="u3844-2">Icon sets</p>
       <p id="u3844-3">&nbsp;</p>
       <p id="u3844-4">&nbsp;</p>
      </div>
@@ -460,7 +460,7 @@ background-color:#222222}
     </div>
     <div class="clearfix colelem" id="pu4276-6"><!-- group -->
      <div class="clearfix grpelem" id="u4276-6"><!-- content -->
-      <p id="u4276-2">Logo's and Single Icon's</p>
+      <p id="u4276-2">Logos and Single Icons</p>
       <p id="u4276-3">&nbsp;</p>
       <p id="u4276-4">&nbsp;</p>
      </div>
