--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/404.css?196640186" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/404.css?194201556" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_404.css?30149899"/>
@@ -410,7 +410,7 @@ background-color:#222222}
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="u3093"><!-- group -->
      <div class="clearfix grpelem" id="u3252-6"><!-- content -->
-      <p>© 2016 · Milena Kiseleva | Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-2">Arthur Gareginyan</span></a></p>
+      <p>© 2016 milenakiseleva.github.io | Designed by Milena Kiseleva and engineered by <a class="nonblock" href="http://www.arthurgareginyan.com" target="_blank" title="Engineer"><span id="u3252-2">Arthur Gareginyan</span></a></p>
      </div>
      <div class="grpelem" id="u4305"><!-- custom html -->
       
