--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
   <title>ABOUT ME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?92232942"/>
   <link rel="stylesheet" type="text/css" href="css/about-me.css?3790628939" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -363,7 +363,7 @@ background-color:#222222}
        </div>
       </div>
       <div class="clearfix colelem" id="u1290-17"><!-- content -->
-       <p id="u1290-2">Hello, My name is Milena. I'm a self employed designer from Moscow, Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people.</p>
+       <p id="u1290-2">Hello, My name is Milena. I'm an independent web designer and illustartor from Moscow, Russia. I’m fascinated by graphics and design, and for several years I’ve been working on projects for many people.</p>
        <p id="u1290-4">I love to use Adobe Apps for creating amazing things.</p>
        <p id="u1290-6">My intention is to create projects that is uplifting, vibrant and colourful. I am really passionate about my work, I like what I am doing and hope that you will be enriched by my projects too.</p>
        <p id="u1290-7">&nbsp;</p>
