--- a/resume.html
+++ b/resume.html
@@ -11,11 +11,11 @@
   <title>RESUME</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?4127463140" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?92232942"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?4025856194" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?298311977"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_resume.css?3849777353"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -400,7 +400,7 @@ background-color:#222222}
       <a class="block" href="assets/milena_kiseleva.vcf"></a>
       <p id="u3222-3"><a class="nonblock" href="assets/milena_kiseleva.vcf"><span id="u3222">Download vCard</span></a></p>
      </div>
-     <div class="clearfix grpelem" id="u1253-107"><!-- content -->
+     <div class="clearfix grpelem" id="u1253-111"><!-- content -->
       <p id="u1253-2">MILENA KISELEVA</p>
       <p id="u1253-4">Moscow, Russia, 141033</p>
       <p id="u1253-6">milavakiseleva@gmail.com</p>
@@ -424,50 +424,52 @@ background-color:#222222}
       <p id="u1253-38">&nbsp;</p>
       <p id="u1253-40">Areas of Expertise</p>
       <p id="u1253-41">&nbsp;</p>
-      <ul class="list0 nls-None" id="u1253-52">
-       <li id="u1253-43">Websites development</li>
-       <li id="u1253-45">Icon creating</li>
-       <li id="u1253-47">Logo creating</li>
-       <li id="u1253-49">Website Layout Design</li>
-       <li id="u1253-51">Web Content / Social Media</li>
+      <ul class="list0 nls-None" id="u1253-56">
+       <li id="u1253-43">Icons creating</li>
+       <li id="u1253-45">Logo creating</li>
+       <li id="u1253-47">UX/UI design</li>
+       <li id="u1253-49">Product design</li>
+       <li id="u1253-51">Website layout design</li>
+       <li id="u1253-53">Microsites/Websites development</li>
+       <li id="u1253-55">Social media integration</li>
       </ul>
-      <p id="u1253-53">&nbsp;</p>
-      <p id="u1253-55">Additional Skills</p>
-      <p id="u1253-56">&nbsp;</p>
-      <p id="u1253-58">Programming languages:</p>
-      <ul class="list0 nls-None" id="u1253-63">
-       <li id="u1253-60">HTML4, HTML5</li>
-       <li id="u1253-62">CSS2, CSS3</li>
+      <p id="u1253-57">&nbsp;</p>
+      <p id="u1253-59">Additional Skills</p>
+      <p id="u1253-60">&nbsp;</p>
+      <p id="u1253-62">Programming languages:</p>
+      <ul class="list0 nls-None" id="u1253-67">
+       <li id="u1253-64">HTML4, HTML5</li>
+       <li id="u1253-66">CSS2, CSS3</li>
       </ul>
-      <p id="u1253-64">&nbsp;</p>
-      <p id="u1253-66">Software:</p>
-      <ul class="list0 nls-None" id="u1253-83">
-       <li id="u1253-68">Adobe Photoshop</li>
-       <li id="u1253-70">Adobe Illustrator</li>
-       <li id="u1253-72">Adobe Draw</li>
-       <li id="u1253-74">Adobe Muse</li>
-       <li id="u1253-76">GIMP</li>
-       <li id="u1253-78">Apple Final Cut Pro</li>
-       <li id="u1253-80">Apple Compressor</li>
-       <li id="u1253-82">Apple Motion</li>
+      <p id="u1253-68">&nbsp;</p>
+      <p id="u1253-70">Software:</p>
+      <ul class="list0 nls-None" id="u1253-87">
+       <li id="u1253-72">Adobe Photoshop</li>
+       <li id="u1253-74">Adobe Illustrator</li>
+       <li id="u1253-76">Adobe Draw</li>
+       <li id="u1253-78">Adobe Muse</li>
+       <li id="u1253-80">GIMP</li>
+       <li id="u1253-82">Apple Final Cut Pro</li>
+       <li id="u1253-84">Apple Compressor</li>
+       <li id="u1253-86">Apple Motion</li>
       </ul>
-      <p id="u1253-84">&nbsp;</p>
-      <p id="u1253-86">Operating system (OS):</p>
-      <ul class="list0 nls-None" id="u1253-91">
-       <li id="u1253-88">Apple Mac OS X</li>
-       <li id="u1253-90">Apple iOS</li>
+      <p id="u1253-88">&nbsp;</p>
+      <p id="u1253-90">Operating system (OS):</p>
+      <ul class="list0 nls-None" id="u1253-95">
+       <li id="u1253-92">Apple Mac OS X</li>
+       <li id="u1253-94">Apple iOS</li>
       </ul>
-      <p id="u1253-92">&nbsp;</p>
-      <p id="u1253-94">Languages known</p>
-      <p id="u1253-95">&nbsp;</p>
-      <ul class="list0 nls-None" id="u1253-100">
-       <li id="u1253-97"><span id="u1253-96">Russian (native)</span></li>
-       <li id="u1253-99"><span id="u1253-98">English</span></li>
+      <p id="u1253-96">&nbsp;</p>
+      <p id="u1253-98">Languages known</p>
+      <p id="u1253-99">&nbsp;</p>
+      <ul class="list0 nls-None" id="u1253-104">
+       <li id="u1253-101"><span id="u1253-100">Russian (native)</span></li>
+       <li id="u1253-103"><span id="u1253-102">English</span></li>
       </ul>
-      <p id="u1253-101">&nbsp;</p>
-      <p id="u1253-103">Certificates</p>
-      <p id="u1253-104">&nbsp;</p>
       <p id="u1253-105">&nbsp;</p>
+      <p id="u1253-107">Certificates</p>
+      <p id="u1253-108">&nbsp;</p>
+      <p id="u1253-109">&nbsp;</p>
      </div>
     </div>
     <div class="SlideShowWidget clearfix widget_invisible colelem" id="slideshowu4628"><!-- none box -->
