--- a/donate.html
+++ b/donate.html
@@ -11,8 +11,8 @@
   <title>DONATE</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/donate.css?185005533" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?92232942"/>
+  <link rel="stylesheet" type="text/css" href="css/donate.css?204478456" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -313,24 +313,21 @@ background-color:#222222}
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="ppu1225-27"><!-- group -->
-     <div class="clearfix grpelem" id="pu1225-27"><!-- group -->
-      <div class="clearfix grpelem" id="u1225-27"><!-- content -->
-       <p id="u1225-2">If you appreciate something I made, you can use PayPal to buy me a coffee!</p>
+    <div class="clearfix colelem" id="ppu1225-23"><!-- group -->
+     <div class="clearfix grpelem" id="pu1225-23"><!-- group -->
+      <div class="clearfix grpelem" id="u1225-23"><!-- content -->
+       <p id="u1225-2"><span id="u1225">If you appreciate something I made, you can buy me a coffee!</span></p>
        <p id="u1225-3">&nbsp;</p>
-       <p id="u1225-5">I spend a lot of time trying to make sure that the themes, plugins and another thing I build are useful and easy to use, and the ultimate proof of that for me is that you actually want to use them.</p>
+       <p id="u1225-5">I spend a lot of time trying to make sure that the things I build are useful, and the ultimate proof of that for me is that you actually want to use them. But, I’m an independent designer, without a regular income, so every little contribution helps cover my costs and lets me spend more time building things for people like you to enjoy.</p>
        <p id="u1225-6">&nbsp;</p>
-       <p id="u1225-8">I’m a freelance developer, without a regular income, so every little contribution helps cover my costs and lets me spend more time building things for people like you to enjoy.</p>
-       <p id="u1225-9">&nbsp;</p>
        <p>&nbsp;</p>
-       <p><span id="u1225-11">PayPal address:</span> <a class="nonblock" href="https://www.paypal.me/milenak" target="_blank"><span class="Pink-Link" id="u1225-13">www.paypal.me/milenak</span></a></p>
+       <p><span id="u1225-8">PayPal address:</span> <a class="nonblock" href="https://www.paypal.me/milenak" target="_blank"><span class="Pink-Link" id="u1225-10">www.paypal.me/milenak</span></a></p>
        <p>&nbsp;</p>
-       <p><span id="u1225-17">PayPal button:</span><span id="u1225-18"></span></p>
+       <p><span id="u1225-14">PayPal button:</span><span id="u1225-15"></span></p>
        <p>&nbsp;</p>
        <p>&nbsp;</p>
-       <p>&nbsp;</p>
-       <p id="u1225-23">&nbsp;</p>
-       <p id="u1225-25">Thank you for the appreciation, and I’m really glad you found my work useful!</p>
+       <p id="u1225-19">&nbsp;</p>
+       <p id="u1225-21">Thank you for the appreciation!</p>
       </div>
       <div class="grpelem" id="u1235"><!-- custom html -->
        
