--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
   <title>PORTFOLIO</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4277828687"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
-  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4237039546" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?92232942"/>
+  <link rel="stylesheet" type="text/css" href="css/portfolio.css?4147009210" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -439,7 +439,7 @@ background-color:#222222}
     </div>
     <div class="clearfix colelem" id="pu3844-6"><!-- group -->
      <div class="clearfix grpelem" id="u3844-6"><!-- content -->
-      <p id="u3844-2">Icon sets</p>
+      <p id="u3844-2">Icons</p>
       <p id="u3844-3">&nbsp;</p>
       <p id="u3844-4">&nbsp;</p>
      </div>
@@ -448,29 +448,34 @@ background-color:#222222}
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
      <div class="grpelem" id="u4005"><!-- simple frame --></div>
     </div>
-    <div class="clearfix colelem" id="pu4529"><!-- group -->
-     <div class="shadow museBGSize clearfix grpelem" id="u4529"><!-- group -->
-      <div class="clearfix grpelem" id="u4567-4"><!-- content -->
-       <p id="u4567-2">Easter Egg's</p>
-      </div>
+    <div class="shadow museBGSize clearfix colelem" id="u4608"><!-- group -->
+     <a class="nonblock nontext clearfix grpelem" id="u4619-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner" target="_blank"><!-- content --><p id="u4619-2">Weather colored liner</p></a>
+    </div>
+    <div class="clearfix colelem" id="pu4874-6"><!-- group -->
+     <div class="clearfix grpelem" id="u4874-6"><!-- content -->
+      <p id="u4874-2">Cliparts</p>
+      <p id="u4874-3">&nbsp;</p>
+      <p id="u4874-4">&nbsp;</p>
      </div>
-     <div class="shadow museBGSize clearfix grpelem" id="u4608"><!-- group -->
-      <a class="nonblock nontext clearfix grpelem" id="u4619-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner" target="_blank"><!-- content --><p id="u4619-2">Weather colored liner</p></a>
+     <div class="grpelem" id="u4878"><!-- simple frame --></div>
+     <div class="shadow museBGSize clearfix grpelem" id="u4879"><!-- group -->
+      <div class="clearfix grpelem" id="u4883-4"><!-- content -->
+       <p id="u4883-2">Easter Egg's</p>
+      </div>
      </div>
     </div>
     <div class="clearfix colelem" id="pu4276-6"><!-- group -->
      <div class="clearfix grpelem" id="u4276-6"><!-- content -->
-      <p id="u4276-2">Logos and Single Icons</p>
+      <p id="u4276-2">Logos</p>
       <p id="u4276-3">&nbsp;</p>
       <p id="u4276-4">&nbsp;</p>
      </div>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4277" href="https://wordpress.org/plugins/rss-feed-icon-for-specificfeedscom/" target="_blank" title="Open page in new tab"><!-- group --><div class="clearfix grpelem" id="u4570-4"><!-- content --><p id="u4570-2">Icon for WordPress Plugin</p></div></a>
+     <div class="clearfix grpelem" id="u4278-4"><!-- content -->
+      <p>WP Plugin &quot;RSS Feed Icon for SpecificFeeds.com&quot;</p>
+     </div>
      <div class="grpelem" id="u4279"><!-- simple frame --></div>
     </div>
-    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u4277" href="https://wordpress.org/plugins/rss-feed-icon-for-specificfeedscom/" target="_blank" title="Open page in new tab"><!-- group --><div class="clearfix grpelem" id="u4570-4"><!-- content --><p id="u4570-2">Icon for WordPress Plugin</p></div></a>
-    <div class="clearfix colelem" id="u4278-4"><!-- content -->
-     <p>WP Plugin &quot;RSS Feed Icon for SpecificFeeds.com&quot;</p>
-    </div>
-    <div class="colelem" id="u4540"><!-- simple frame --></div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="u3093"><!-- group -->
      <div class="clearfix grpelem" id="u3252-6"><!-- content -->
