--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <title>404</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?115342351"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?92232942"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?4187950729"/>
   <link rel="stylesheet" type="text/css" href="css/404.css?3847173286" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
@@ -451,7 +451,7 @@ background-color:#222222}
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
