--- a/portfolio.html
+++ b/portfolio.html
@@ -447,14 +447,16 @@ background-color:#222222}
     </div>
     <div class="clearfix colelem" id="pu3847"><!-- group -->
      <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3847" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4558-4"><!-- content --><p id="u4558-2">Liner Multimedia Buttons</p></div></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3850" href="https://www.iconfinder.com/iconsets/different-genders" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4561-4"><!-- content --><p id="u4561-2">Different genders</p></div></a>
-     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3850" href="https://www.iconfinder.com/iconsets/different-genders?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4561-4"><!-- content --><p id="u4561-2">Different genders</p></div></a>
+     <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3853" href="https://www.iconfinder.com/iconsets/weather-liner?ref=MilenaKiseleva" target="_blank"><!-- group --><div class="clearfix grpelem" id="u4564-4"><!-- content --><p id="u4564-2">Weather liner</p></div></a>
     </div>
     <div class="clearfix colelem" id="pu4608"><!-- group -->
-     <div class="shadow museBGSize clearfix grpelem" id="u4608"><!-- group -->
+     <div class="pointer_cursor shadow museBGSize clearfix grpelem" id="u4608"><!-- group -->
+      <a class="block" target="_blank" href="https://www.iconfinder.com/iconsets/weather-colored-liner?ref=MilenaKiseleva"></a>
       <a class="nonblock nontext clearfix grpelem" id="u4619-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner" target="_blank"><!-- content --><p id="u4619-2">Weather colored liner</p></a>
      </div>
-     <div class="shadow museBGSize clearfix grpelem" id="u5025"><!-- group -->
+     <div class="pointer_cursor shadow museBGSize clearfix grpelem" id="u5025"><!-- group -->
+      <a class="block" target="_blank" href="https://www.iconfinder.com/iconsets/ice-cream-3?ref=MilenaKiseleva"></a>
       <a class="nonblock nontext clearfix grpelem" id="u5026-4" href="https://www.iconfinder.com/iconsets/ice-cream-3" target="_blank"><!-- content --><p id="u5026-2">Ice Cream</p></a>
      </div>
     </div>
